--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,13 @@
-.mega-menu-center {
-    display: flex;
-    justify-content: center;
+* {
+    margin: 0;
+    padding: 0;
+    /* display: table; */
 }
 
-.mega-nav-center {
-    display: flex;
-    justify-content: center;
+.news-author-img {
+    width: 32px;
 }
 
-.category-responsive {
-    font-size: 18px;
-}
-
-.full-div {
-    border: 2px solid greenyellow;
+.news-author-published {
+    font-size: 12px;
 }
